-m "second commit, edited the site layout"

--- a/Ben.html
+++ b/Ben.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    Okay, I admire your persistence.
+    Okay, I admire your persistence. But now I’m just curious—how far will you go?
     <div>
         <a href="David.html">David</a>
         <a href="Jack.html">Jack</a>
