--- a/David.html
+++ b/David.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    Did you actually think you would learn something about David?
-    <div>
+    Did you actually think you’d learn something about David? That’s adorable.    <div>
         <a href="Jack.html">Jack</a>
         <a href="Ben.html">Ben</a>
         <a href="Frank.html">Frank</a>
