--- a/Donate.html
+++ b/Donate.html
@@ -7,10 +7,11 @@
 
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="Donate_html">
     <div>
         <a href="Index.html">Index</a>
     </div>
-    &#128512&#128512 Thank YOU for YOUR $100 donation!! &#128512&#128512
+    &#128512&#128512 THANK YOU for your GENEROUS $100 donation!! &#128512&#128512
+…which you totally meant to send, right? No takesie-backsies.
 </body>
 </html>
