--- a/Frank.html
+++ b/Frank.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    Frank likes cheese.
+    Frank likes cheese. More than he should. It’s becoming a problem.
     <div>
         <a href="David.html">David</a> 
         <a href="Jack.html">Jack</a>
