--- a/Index.html
+++ b/Index.html
@@ -11,14 +11,14 @@
 
 <!--Main-->
 
-<h1>This is a website to discover new people.</h1>
+<h2>Welcome to the most <i>exclusive</i> club on the internet! A place where we celebrate the existence of truly remarkable individuals—some ancient, some... suspiciously young. Want to join?</h2>
 
 <div class="table">
     <table>
         <tr>
-            <th>Name</th>
-            <th>Age</th>
-            <th>Birthday</th>
+            <th>Suspect</th>
+            <th>Years of Existence</th>
+            <th>Suspiciously specific Birth Date</th>
         </tr>
 
         <tr>
@@ -44,43 +44,61 @@
     </table>
 </div>
 
-<header><h2>People</h2></header>
+<header><h3>People</h3></header>
 
 <ul id="unordered_list">
     <li>
       <p>David Canarsky</p>
-      <img id="David" height="200px" src="images/download1.png" alt="David">
       <div>
-        <a href="David.html">David</a>
+        <a href="David.html">
+          <img id="David" height="200px" src="images/download1.png" alt="David">
+        </a>
       </div>
     </li>
     <li>
       <p>Jack Jack</p>
-      <img id="Jack" height="200px" src="images/download2.png" alt="Jack">
       <div>
-        <a href="Jack.html">Jack</a>
+        <a href="Jack.html">
+          <img id="Jack" height="200px" src="images/download2.png" alt="Jack">
+        </a>
       </div>
     </li>
     <li>
       <p>Ben Berg</p>
-      <img id="Ben" height="200px" src="images/download3.png" alt="Ben">
       <div>
-        <a href="Ben.html">Ben</a>
+        <a href="Ben.html">
+          <img id="Ben" height="200px" src="images/download3.png" alt="Ben">
+        </a>
       </div>
     </li>
     <li>
       <p>Frank Bank</p>
-      <img id="Frank" height="200px" src="images/download4.png" alt="Frank">
       <div>
-        <a href="Frank.html">Frank</a>
+        <a href="Frank.html">
+          <img id="Frank" height="200px" src="images/download4.png" alt="Frank">
+        </a>
       </div>
     </li>
   </ul>
   
+  <div id="testimonies">
+    <h3>Testimonies</h3>
+    <p>
+      "Before this website, I was just a random dude. Now I’m a random dude with a bio. My life is complete!"
+— Ben, 841 years young.
+    </p>
+    <p>
+      "I was born in 2034 BC and nobody cared. Now? I have my name on a website. Take that, history books!"
+— Frank Bank
+    </p>
+  </div>
+
+  <hr>
 
 <p>
-    If you want to be added to this list then you're strange. Put your
-    name, email and information about yourself so we can make a bio about you too &#128512!
+  Do you have what it takes to be immortalized on this highly prestigious, yet incredibly pointless website?
+  Probably not. But hey, let’s pretend you do! 
+  Submit your details… but let’s be real, we’ll probably accept you. Maybe.
 </p>
 
 <form action="/submit" method="get">
@@ -91,12 +109,19 @@
     <label for="Birthday">Birthday:</label>
     <input type="text" id="birthday" name="birthday">
     <br>
-    <button type="submit">Submit</button>
+    <button type="submit">List Me Among Legends</button>
 </form>
 
 <a href="Donate.html" class="donate-button">
-    DONATE
+    Support the Cause (We're Definitely Not Scamming You)
 </a>
+
+<div id="copyright">
+  <p>
+   © 2025. The Most Legendary Website Ever. All rights reserved.
+   Except for Frank—he’s been around so long that nothing belongs to him anymore.
+  </p>
+</div>
 
 </body>
 </html>
