--- a/Jack.html
+++ b/Jack.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    Why bother to click a second link on the website after the first one?
+    You really clicked a second link? Are you lost?
     <div>
         <a href="David.html">David</a>
         <a href="Ben.html">Ben</a>
