formatted the links a little bit

--- a/Ben.html
+++ b/Ben.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     Okay, I admire your persistence. But now I’m just curious—how far will you go?
-    <div>
-        <a href="David.html">David</a>
+    <div class="links">
+        <a href="David.html">David</a> 
         <a href="Jack.html">Jack</a>
-        <a href="Frank.html">Frank</a>
+        <a href="Ben.html">Ben</a>
         <a href="Index.html">Index</a>
     </div>
     <link rel="stylesheet" href="style.css">
