--- a/David.html
+++ b/David.html
@@ -6,10 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    Did you actually think you’d learn something about David? That’s adorable.    <div>
+    Did you actually think you’d learn something about David? That’s adorable.    
+    <div class="links">
+        <a href="David.html">David</a> 
         <a href="Jack.html">Jack</a>
         <a href="Ben.html">Ben</a>
-        <a href="Frank.html">Frank</a>
         <a href="Index.html">Index</a>
     </div>
     <link rel="stylesheet" href="style.css">
