--- a/Donate.html
+++ b/Donate.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="Donate_html">
-    <div>
+    <div class="links">
         <a href="Index.html">Index</a>
     </div>
     &#128512&#128512 THANK YOU for your GENEROUS $100 donation!! &#128512&#128512
