--- a/Frank.html
+++ b/Frank.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     Frank likes cheese. More than he should. It’s becoming a problem.
-    <div>
+    <div class="links">
         <a href="David.html">David</a> 
         <a href="Jack.html">Jack</a>
         <a href="Ben.html">Ben</a>
