--- a/Jack.html
+++ b/Jack.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     You really clicked a second link? Are you lost?
-    <div>
-        <a href="David.html">David</a>
+    <div class="links">
+        <a href="David.html">David</a> 
+        <a href="Jack.html">Jack</a>
         <a href="Ben.html">Ben</a>
-        <a href="Frank.html">Frank</a>
         <a href="Index.html">Index</a>
     </div>
     <link rel="stylesheet" href="style.css">
